[tool.poetry]
name = "cassandra-join-library"
version = "0.1.0"
description = ""
authors = ["widyaput <13519105@std.stei.itb.ac.id>"]
readme = "README.md"
packages = [{include = "cassandra_join_library"}]

[tool.poetry.dependencies]
python = "^3.10"
bleach = "5.0.1"
cassandra-driver = "3.25.0"
certifi = "2022.6.15"
charset-normalizer = "2.1.0"
click = "8.0.3"
commonmark = "0.9.1"
docutils = "0.19"
geomet = "0.2.1.post1"
idna = "3.3"
importlib-metadata = "4.12.0"
keyring = "23.8.2"
memory-profiler = "0.60.0"
numpy = "1.22.3"
pkginfo = "1.8.3"
psutil = "5.9.1"
pygments = "2.13.0"
pympler = "1.0.1"
readme-renderer = "37.0"
requests = "2.28.1"
requests-toolbelt = "0.9.1"
rfc3986 = "2.0.0"
rich = "12.5.1"
six = "1.16.0"
tabulate = "0.8.9"
twine = "4.0.1"
typing-extensions = "4.3.0"
urllib3 = "1.26.11"
webencodings = "0.5.1"
zipp = "3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
