[metadata]
name = cassandra_joinlib
version = 0.1.5
author = Rafi Adyatma
author_email = rafi.adyatma47@gmail.com
description = Cassandra client-side join operation for Python
long_description = file:ReadME.md
long_description_content_type = text/markdown
url = https://github.com/Rainburn/Cassandra-Join-Library
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
install_requires =
    cassandra-driver == 3.25.0
    memory-profiler==0.60.0
    numpy==1.22.3
    psutil==5.9.1
    Pympler==1.0.1
    tabulate==0.8.9
    twine==4.0.1
python_requires = >=3.7
include_package_data = True